--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -126,6 +126,7 @@ build_flags               = ${esp82xx_defaults.build_flags}
 platform                  = https://github.com/Jason2866/platform-espressif8266/releases/download/2.9.0/platform-espressif8266-2.9.0.tar.gz
 platform_packages         = ;framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
 build_unflags             = ${esp_defaults.build_unflags}
+                            -Wswitch-unreachable
 build_flags               = ${esp82xx_defaults.build_flags}
 
 ; *********** Alternative Options, enable only if you know exactly what you do ********
