missing "-Wno-switch-unreachable"

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -128,6 +128,7 @@ platform_packages         = ;framework-arduinoespressif8266 @ https://github.com
 build_unflags             = ${esp_defaults.build_unflags}
                             -Wswitch-unreachable
 build_flags               = ${esp82xx_defaults.build_flags}
+                            -Wno-switch-unreachable
 
 ; *********** Alternative Options, enable only if you know exactly what you do ********
 ; NONOSDK221
