--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ build_dir = .pioenvs
 workspace_dir = .pioenvs
 build_cache_dir = .cache
 extra_configs = platformio_tasmota_env.ini
-      ;          platformio_override.ini
+               platformio_override.ini
 
 ; *** Build/upload environment
 default_envs =
@@ -32,7 +32,7 @@ default_envs =
 ;                tasmota-BR
 ;                tasmota-CN
 ;                tasmota-CZ
-;                tasmota-DE
+                tasmota-DE
 ;                tasmota-ES
 ;                tasmota-FR
 ;                tasmota-GR
