--- a/platformio_tasmota_env.ini
+++ b/platformio_tasmota_env.ini
@@ -16,6 +16,7 @@ upload_speed = ${common.upload_speed}
 extra_scripts = ${common.extra_scripts}
 lib_ldf_mode = deep+
 
+#define DEBUGV(...) do { (void)0; } while (0)
 
 [env:tasmota]
 
