--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ default_envs =
 ;                tasmota-BR
 ;                tasmota-CN
 ;                tasmota-CZ
-                tasmota-DE
+;                tasmota-DE
 ;                tasmota-ES
 ;                tasmota-FR
 ;                tasmota-GR
