--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ build_dir = .pioenvs
 workspace_dir = .pioenvs
 build_cache_dir = .cache
 extra_configs = platformio_tasmota_env.ini
-               platformio_override.ini
+                platformio_override.ini
 
 ; *** Build/upload environment
 default_envs =
@@ -91,7 +91,7 @@ build_flags               = -D_IR_ENABLE_DEFAULT_=false
 ; new mechanism to set the IRremoteESP8266 supported protocols: none except HASH, NEC, RC5, RC6
 ; *********************************************************************
 ; *** Use custom settings from file user_config_override.h
-  ;                          -DUSE_CONFIG_OVERRIDE
+                            -DUSE_CONFIG_OVERRIDE
 ; *********************************************************************
 
 
@@ -107,7 +107,7 @@ build_flags               = ${esp_defaults.build_flags}
                             ; lwIP 2 - Higher Bandwidth no Features
                             -DPIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH_LOW_FLASH
                             ; VTABLES in Flash
-                            -DVTABLES_IN_FLASH
+                            -DVTABLES_IN_FLASH                         
                             ; remove the 4-bytes alignment for PSTR()
                             -DPSTR_ALIGN=1
                             ; restrict to minimal mime-types
