--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
-  - before: pip3 install -U https://github.com/platformio/platformio-core/archive/develop.zip
+  - before: pip3 install -U platformio
     command: platformio run -e tasmota
