Remove esp32 env

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -9,8 +9,7 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [platformio]
-extra_configs = platformio_tasmota_env32.ini
-                platformio_tasmota_cenv.ini
+extra_configs = platformio_tasmota_cenv.ini
 
 ; *** Build/upload environment
 default_envs =
