--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -31,3 +31,9 @@ build_flags             = ${esp_defaults.build_flags}
     -D sint16_t=int16_t
     -D memcpy_P=memcpy
 	  -D memcmp_P=memcmp
+
+lib_extra_dirs =
+    libesp32
+
+lib_ignore =
+    cc1101
