--- a/lib/OneWire-Stickbreaker-20190506-1.1/library.properties
+++ b/lib/OneWire-Stickbreaker-20190506-1.1/library.properties
@@ -3,8 +3,8 @@ version=2.3.3
 author=Jim Studt, Tom Pollard, Robin James, Glenn Trewitt, Jason Dangel, Guillermo Lovato, Paul Stoffregen, Scott Roberts, Bertrik Sikken, Mark Tillotson, Ken Butcher, Roger Clark, Love Nystrom
 maintainer=Paul Stoffregen
 sentence=Access 1-wire temperature sensors, memory and other chips.
-paragraph=
+paragraph= Mod of Paul Stoffregen code to support ESP32
 category=Communication
 url=http://www.pjrc.com/teensy/td_libs_OneWire.html
-architectures=*
+architectures=esp32
 
