--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,5 @@
-tasks:
-  - before: brew install uncrustify
-    command: platformio run -e tasmota
+  tasks:
+  - command: platformio run -e tasmota
 
 image:
   file: .gitpod.Dockerfile
