--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ default_envs =
 ;                tasmota-sensors
 ;                tasmota-display
 ;                tasmota-zbbridge
-                tasmota-ir
+;                tasmota-ir
 ;                tasmota-BG
 ;                tasmota-BR
 ;                tasmota-CN
