Support for Vietnamese language translations

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,7 @@ default_envs =
 ;                tasmota-TR
 ;                tasmota-TW
 ;                tasmota-UK
+;                tasmota-VN
 ;
 ; *** Selection for Tasmota ESP32 is done in platformio_tasmota32.ini
 ;
