--- a/platformio.ini
+++ b/platformio.ini
@@ -59,6 +59,7 @@ build_cache_dir = .cache
 extra_configs = platformio_tasmota32.ini
                 platformio_tasmota_env.ini
                 platformio_tasmota_env32.ini
+                platformio_lib.ini
                 platformio_override.ini
 default_envs =  ${build_envs.default_envs}
 
@@ -123,22 +124,9 @@ build_flags               = ${esp_defaults.build_flags}
                             -DPSTR_ALIGN=1
                             ; restrict to minimal mime-types
                             -DMIMETYPE_MINIMAL
-
-lib_ignore                = Servo(esp8266)
-                            ESP8266AVRISP
-                            ESP8266LLMNR
-                            ESP8266NetBIOS
-                            ESP8266SSDP
-                            ESP8266WiFiMesh
-                            Ethernet(esp8266)
-                            GDBStub
-                            TFT_Touch_Shield_V2
-                            ESP8266WiFiMesh
-                            EspSoftwareSerial
-                            SPISlave
-                            Hash
-                            
-
+lib_deps                  = IRremoteESP8266
+lib_ignore                = ${lib_EP8266_default.lib_ignore}
+                           
 [irremoteesp_full]
 build_flags               = -DUSE_IR_REMOTE_FULL
                             -U_IR_ENABLE_DEFAULT_
