Lib ignore Optimize (part 3)

--- a/platformio_lib.ini
+++ b/platformio_lib.ini
@@ -1,7 +1,150 @@
 ; ********************************************************
 ; ***  PlatformIO Configuration for Library DISABLING  ***
 ; ********************************************************
+;
+;
+; ***********************************************************************
+; ***  Config Setup for disabling for the different Tasmota variants  ***
+; ***********************************************************************
 
+[lib_Tasmota]
+; Disable not needed libs to build TASMOTA, IR-CUSTOM and all language variants
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+;    ${lib_ESP_ir.lib_ignore}
+;    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+[lib_minimal]
+; Disable not needed libs to build TASMOTA-minimal
+lib_ignore = 
+    ${lib_all_EP8266.lib_ignore}
+
+[lib_lite]
+; Disable not needed libs to build TASMOTA-lite
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+    ${lib_ESP_ir.lib_ignore}
+    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+[lib_knx]
+; Disable not needed libs to build TASMOTA-KNX
+lib_ignore = 
+    ;${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+;    ${lib_ESP_ir.lib_ignore}
+;    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+[lib_sensors]
+; Disable not needed libs to build TASMOTA-sensors
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+;    ${lib_i2c_sensor.lib_ignore}
+;    ${lib_sensor.lib_ignore}
+;    ${lib_rf.lib_ignore}
+;    ${lib_ESP_ir.lib_ignore}
+;    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+[lib_display]
+; Disable not needed libs to build TASMOTA-display
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+;    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+;    ${lib_ESP_ir.lib_ignore}
+;    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+[lib_ir]
+; Disable not needed libs to build TASMOTA-IR
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+;    ${lib_ESP_ir.lib_ignore}
+    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+
+[lib_zbbridge]
+; Disable not needed libs to build TASMOTA-ZbBridge
+lib_ignore = 
+    ${lib_ESP_knx.lib_ignore}
+    ${lib_EP8266.lib_ignore}
+;    ${lib_custom.lib_ignore}
+    ${lib_SSL.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
+    ${lib_i2c_sensor.lib_ignore}
+    ${lib_sensor.lib_ignore}
+    ${lib_rf.lib_ignore}
+    ${lib_ESP_ir.lib_ignore}
+    ${lib_light.lib_ignore}
+    ${lib_audio.lib_ignore}
+    ${lib_serial.lib_ignore}
+    ${lib_other.lib_ignore}
+    ${lib_SPI.lib_ignore}
+
+
+
+
+; ******************************
+; ***  Library groups setup  ***
+; ******************************
 
 [lib_EP8266_default]
 lib_ignore = 
@@ -28,35 +171,42 @@ lib_ignore =
 [lib_all_EP8266]
 lib_ignore = 
     ${lib_EP8266.lib_ignore}
-    ${lib_Tasmota.lib_ignore}
+    ${lib_knx.lib_ignore}
+    ${lib_custom.lib_ignore}
     ${lib_SSL.lib_ignore}
-    ${lib_display.lib_ignore}
+    ${lib_ESP_display.lib_ignore}
     ${lib_i2c_sensor.lib_ignore}
     ${lib_sensor.lib_ignore}
     ${lib_rf.lib_ignore}
-    ${lib_ir.lib_ignore}
+    ${lib_ESP_ir.lib_ignore}
     ${lib_light.lib_ignore}
     ${lib_audio.lib_ignore}
     ${lib_serial.lib_ignore}
     ${lib_other.lib_ignore}
     ${lib_SPI.lib_ignore}
 
-[lib_Tasmota]
+[lib_custom]
 lib_ignore =
     NTP Library
     base64
     Unishox Compressor Decompressor highly customized and optimized for ESP8266 and Tasmota
-    ;ESP KNX IP Library
     UdpListener
+    C2Programmer
+    TasmotaSerial
+    TasmotaModbus
+
+[lib_ESP_knx]
+lib_ignore =
+    ;ESP KNX IP Library
 
 [lib_SSL]
 lib_ignore =
     BearSSL
 
-[lib_display]
+[lib_ESP_display]
 lib_ignore =
     LinkedList
-    Adafruit BusIO
+    ;Adafruit BusIO
     Adafruit GFX Library
     Arduino ST7789 Library
     Adafruit ILI9341
@@ -68,7 +218,7 @@ lib_ignore =
     Adafruit SH1106-gemu-1.0
     Adafruit SSD1306
     SSD3115
-    I2Cdevlib-Core
+    ;I2Cdevlib-Core
     
 [lib_i2c_sensor]
 lib_ignore =
@@ -105,10 +255,9 @@ lib_ignore =
 lib_ignore =
     rc-switch
     RF24
-    C2Programmer
     KeeloqLib
 
-[lib_ir]
+[lib_ESP_ir]
 lib_ignore =
     IRremoteESP8266
 
@@ -124,8 +273,6 @@ lib_ignore =
 [lib_serial]
 lib_ignore =
     LibTeleinfo
-    TasmotaSerial
-    TasmotaModbus
 
 [lib_other]
 lib_ignore =
@@ -136,4 +283,4 @@ lib_ignore =
 [lib_SPI]
 lib_ignore =
     cc1101
-    EEPROM 24C128    
+    EEPROM 24C128
