small changes for libignorre

--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -43,6 +43,7 @@ default_envs =  ${build_envs.default_envs}
 [core32]
 platform                = espressif32@2.0.0
 platform_packages       = tool-esptoolpy@1.20800.0
+                          platformio/framework-arduinoespressif32 @ 3.10004.201016
 
 [common32]
 platform                = ${core32.platform}
