Esp32 lib ignore

--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -81,3 +81,14 @@ lib_extra_dirs =
 
 lib_ignore =
     cc1101
+    ESP32 Azure IoT Arduino
+    ESP32 Async UDP
+    ESP32 BLE Arduino
+    SimpleBLE
+    WiFiClientSecure
+    NetBIOS
+    ESP32
+    DNSServer
+    Preferences
+    BluetoothSerial
+    
