--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -85,7 +85,7 @@ lib_ignore =
     ESP32 Async UDP
     ESP32 BLE Arduino
     SimpleBLE
-    WiFiClientSecure
+    ;WiFiClientSecure
     NetBIOS
     ESP32
     DNSServer
