--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -88,7 +88,7 @@ lib_ignore =
     ;WiFiClientSecure
     NetBIOS
     ESP32
-    DNSServer
+    ;DNSServer
     Preferences
     BluetoothSerial
     
