--- a/platformio.ini
+++ b/platformio.ini
@@ -84,13 +84,26 @@ upload_port               = COM5
 extra_scripts             = ${scripts_defaults.extra_scripts}
 lib_ldf_mode              = chain+  
 shared_libdeps_dir        = lib
+
+; *** Library disable / enable for variant Tasmota. Disable reduces compile time
+; *** !!! Disabling needed libs will generate compile errors !!!
+; *** The resulting firmware will NOT be different if you leave all libs enabled
+; *** Disabling by putting a ";" in front of the lib name
+; *** If you dont know what it is all about, do not change
 lib_extra_dirs            = 
+; *** Only disabled for Tasmota minimal and Tasmota light. For all other variants needed!
                             lib_basic
+; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
                             lib_i2c
+; *** Displays. Disable if you dont have any Display activated
                             lib_display
+; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
                             lib_ssl
+; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
                             lib_audio
+; *** RF 433 stuff (not RF Bridge). Recommended to disable
                             lib_rf
+; *** Mostly not used functions. Recommended to disable
                             lib_div
 
 [scripts_defaults]
