add ESP32 lib infos

--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -78,12 +78,26 @@ build_flags             = ${esp_defaults.build_flags}
 
 lib_ldf_mode            = chain+  
 shared_libdeps_dir      = lib
-lib_extra_dirs          =
-    libesp32
-    lib_basic
-    lib_i2c
-    lib_display
-    lib_ssl
-    lib_audio
-    lib_rf
-    lib_div
+; *** Library disable / enable for variant Tasmota. Disable reduces compile time
+; *** !!! Disabling needed libs will generate compile errors !!!
+; *** The resulting firmware will NOT be different if you leave all libs enabled
+; *** Disabling by putting a ";" in front of the lib name
+; *** If you dont know what it is all about, do not change
+lib_extra_dirs            = 
+; *** ESP32 lib. ALWAYS needed for ESP32 !!!
+                            libesp32
+; *** Only disabled for Tasmota minimal and Tasmota light. For all other variants needed!
+                            lib_basic
+; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
+                            lib_i2c
+; *** Displays. Disable if you dont have any Display activated
+                            lib_display
+; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
+                            lib_ssl
+; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
+                            lib_audio
+; *** RF 433 stuff (not RF Bridge). Recommended to disable
+                            lib_rf
+; *** Mostly not used functions. Recommended to disable
+                            lib_div
+
