--- a/platformio_tasmota_env.ini
+++ b/platformio_tasmota_env.ini
@@ -65,7 +65,7 @@ lib_extra_dirs = ${common.lib_extra_dirs}
 [env:tasmota-zbbridge]
 build_flags = ${common.build_flags} -DFIRMWARE_ZBBRIDGE
 board_build.f_cpu = 160000000L
-lib_extra_dirs = lib_basic, lib_ssl 
+lib_extra_dirs = lib_ssl 
 
 [env:tasmota-BG]
 build_flags = ${common.build_flags} -DMY_LANGUAGE=bg_BG
