--- a/platformio.ini
+++ b/platformio.ini
@@ -84,13 +84,13 @@ extra_scripts             = ${scripts_defaults.extra_scripts}
 lib_ldf_mode              = chain+  
 shared_libdeps_dir        = lib
 lib_extra_dirs            = 
-                            lib_basic
-                            lib_i2c
-                            lib_display
-                            lib_ssl
-                            lib_audio
-                            lib_rf
-                            lib_div
+                            lib/lib_basic
+                            lib/lib_i2c
+                            lib/lib_display
+                            lib/lib_ssl
+                            lib/lib_audio
+                            lib/lib_rf
+                            lib/lib_div
 
 [scripts_defaults]
 extra_scripts             = pio/strip-floats.py
