Fix ESP32 override build_flags

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -186,10 +186,10 @@ build_flags               = ${esp82xx_defaults.build_flags}
 ;build_flags             = ${core32_stage.build_flags}
 
 [core32_stage]
-platform_packages        = tool-esptoolpy@1.20800.0
-                           framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#f7fb00632e04d74a7890a77fa7dbbb8ae572e866
+platform_packages         = tool-esptoolpy@1.20800.0
+                            framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#f7fb00632e04d74a7890a77fa7dbbb8ae572e866
 
-build_flags               = ${common32.build_flags}
+build_flags               = ${esp32_defaults.build_flags}
                             -D ESP32_STAGE=true
 
 ; *** Debug version used for PlatformIO Home Project Inspection
