enable all libs

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -211,13 +211,13 @@ lib_extra_dirs            =
 ; *** Displays. Disable if you dont have any Display activated
                             lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
-;                            lib/lib_ssl
+                            lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
-;                            lib/lib_audio
+                            lib/lib_audio
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
                             lib/lib_rf
 ; *** Mostly not used functions. Recommended to disable
-;                            lib/lib_div
+                            lib/lib_div
 
 
 
