Platformio Override changes
remove unneeded entry and correct copy&paste error

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -72,8 +72,7 @@ extra_scripts             = ${scripts_defaults.extra_scripts}
 ;                            pio/strip-floats.py
 ;                            pio/http-uploader.py
 
-lib_ldf_mode              = ${library.lib_ldf_mode} 
-shared_libdeps_dir        = ${library.shared_libdeps_dir}
+lib_extra_dirs             = ${library.lib_extra_dirs}
 
 [core]
 ; Activate only (one set) if you want to override the standard core defined in platformio.ini !!!
@@ -175,8 +174,7 @@ upload_port             = ${common.upload_port}
 upload_resetmethod      = ${common.upload_resetmethod}
 upload_speed            = 921600
 extra_scripts           = ${common.extra_scripts}
-lib_ldf_mode            = ${library.lib_ldf_mode} 
-shared_libdeps_dir      = ${library.shared_libdeps_dir} 
+lib_extra_dirs          = ${library.lib_extra_dirs}
                           ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 [core32]
