target align for ESPxx and ESP32

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -126,7 +126,7 @@ build_flags                 = ${esp82xx_defaults.build_flags}
 
 [core_stage]
 ; *** Esp8266 core for Arduino version stage
-platform_packages           = framework-arduinoespressif8266@https://github.com/esp8266/Arduino.git
+platform_packages           = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
 ; *** Use Xtensa build chain 10.2. GNU13 from https://github.com/earlephilhower/esp-quick-toolchain
                               mcspr/toolchain-xtensa @ 5.100200.200918
                               platformio/tool-esptool @ 1.413.0
@@ -192,10 +192,12 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 
 [core32_stage]
 platform                    = espressif32 @ 2.0.0
-platform_packages           = tool-esptoolpy@1.20800.0
+platform_packages           = tool-esptoolpy @ 1.20800.0
                               framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#f7fb00632e04d74a7890a77fa7dbbb8ae572e866
 build_unflags               = ${esp32_defaults.build_unflags}
+                              -mtarget-align
 build_flags                 = ${esp32_defaults.build_flags}
+                              -mno-target-align
                               -DESP32_STAGE=true
 
 [library]
