--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -87,6 +87,7 @@ build_flags                 = ${esp_defaults.build_flags}
 [core32]
 platform                    = espressif32 @ 2.0.0
 platform_packages           = tool-esptoolpy@1.20800.0
-                              platformio/framework-arduinoespressif32 @ 3.10004.201016
+                              framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.4.1/esp32-1.0.4.1.zip
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
+
