--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -189,7 +189,7 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 [core32_stage]
 platform                    = espressif32 @ 2.0.0
 platform_packages           = tool-esptoolpy @ 1.20800.0
-                              framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#f7fb00632e04d74a7890a77fa7dbbb8ae572e866
+                              framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
                               -DESP32_STAGE=true
