Add compile option -free -fipa-pta ...
Save some tens of bytes Thx to @jjsuwa-sys3175

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -92,6 +92,8 @@ platform_packages           = framework-arduinoespressif8266 @ https://github.co
                               platformio/tool-esptool @ 1.413.0
 build_unflags               = ${esp_defaults.build_unflags}
 build_flags                 = ${esp82xx_defaults.build_flags}
+                              -free
+                              -fipa-pta
 
 ; *********** Alternative Options, enable only if you know exactly what you do ********
 ; NONOSDK221
