BT is not working with latest IDF 3.3. Version

--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -87,7 +87,7 @@ build_flags                 = ${esp_defaults.build_flags}
 [core32]
 platform                    = espressif32 @ 2.0.0
 platform_packages           = tool-esptoolpy@1.20800.0
-                              tasmota/framework-arduinoespressif32 @ 3.10004.1
+                              framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#56a7ae871204cdf24fab8520ab9f76782d94b599
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
 
