--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -90,4 +90,5 @@ platform_packages           = tool-esptoolpy@1.20800.0
                               framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#56a7ae871204cdf24fab8520ab9f76782d94b599
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
+                              -DESP32_STAGE=true
 
