--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -76,7 +76,7 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 
 [tasmota_stage]
 ; *** Esp8266 core for Arduino version Tasmota stage (PR7231 and Backport PR7514)
-platform_packages           = framework-arduinoespressif8266 @ https://github.com/Jason2866/Arduino/releases/download/2.7.4.7/esp8266-2.7.4.7.zip
+platform_packages           = tasmota/framework-arduinoespressif8266 @ 3.20704.7
                               platformio/tool-esptool @ 1.413.0
 build_unflags               = ${esp_defaults.build_unflags}
 build_flags                 = ${esp82xx_defaults.build_flags}
@@ -125,9 +125,11 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 [core32_stage]
 platform                    = espressif32 @ 2.0.0
 platform_packages           = tool-esptoolpy @ 1.20800.0
-                              framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+                              framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.4.2/esp32-1.0.4.2.zip
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
+                              ; ESP32 needs wifi modem sleep for working BT !!!
+                              -DAPP_NORMAL_SLEEP=true
                               -DESP32_STAGE=true
 
 [library]
