add compiler flag -Wreturn-type
to get a warning for "unclear" returns

--- a/platformio.ini
+++ b/platformio.ini
@@ -105,6 +105,7 @@ build_unflags               = -mtarget-align
                               -Wdeprecated-declarations
 build_flags                 = -mno-target-align
                               -Wno-deprecated-declarations
+                              -Wreturn-type
                               -D_IR_ENABLE_DEFAULT_=false
                               -DDECODE_HASH=true -DDECODE_NEC=true -DSEND_NEC=true
                               -DDECODE_RC5=true -DSEND_RC5=true -DDECODE_RC6=true -DSEND_RC6=true
