--- a/platformio.ini
+++ b/platformio.ini
@@ -132,6 +132,8 @@ build_flags                 = ${esp_defaults.build_flags}
                               -DPSTR_ALIGN=1
                               ; restrict to minimal mime-types
                               -DMIMETYPE_MINIMAL
+                              ; uncomment the following to enable TLS with 4096 RSA certificates
+                              ;-DUSE_4K_RSA
 
 [irremoteesp_full]
 build_flags                 = -DUSE_IR_REMOTE_FULL
