Save ~80 bytes of flash
with compile option `-free -fipa-pta` as default for all variants

--- a/platformio.ini
+++ b/platformio.ini
@@ -104,6 +104,8 @@ build_unflags               = -mtarget-align
                               -Wall
                               -Wdeprecated-declarations
 build_flags                 = -mno-target-align
+                              -free
+                              -fipa-pta
                               -Wno-deprecated-declarations
                               -Wreturn-type
                               -D_IR_ENABLE_DEFAULT_=false
