--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -126,10 +126,10 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 [core32_stage]
 platform                    = espressif32 @ 2.0.0
 platform_packages           = tool-esptoolpy @ https://github.com/Jason2866/esptool/releases/download/v3.0/esptool-3.0.zip
-                              framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#idf-release/v3.3
+                              framework-arduinoespressif32 @ https://github.com/Jason2866/arduino-esp32/releases/download/1.0.5-rc2/esp32-1.0.5-rc2.zip
 build_unflags               = ${esp32_defaults.build_unflags}
 build_flags                 = ${esp32_defaults.build_flags}
-                              -DESP32_STAGE=true
+                              ;-DESP32_STAGE=true
 
 [library]
 lib_ldf_mode                = chain+
