Rename pio folder to pio-tools solve linux build errors
When vscode is ran from the Tasmota folder in Linux, build fails with message :
```Executing task: pio run <
    The terminal process failed to launch: Path to shell executable "pio" is not a file of a symlink.```
Renaming pio folder into pio-tools solve the problem.

Note: the problem can still occur if the user have a pio folder in his PATH...

--- a/platformio.ini
+++ b/platformio.ini
@@ -93,10 +93,10 @@ lib_extra_dirs              =
                               lib/lib_div
 
 [scripts_defaults]
-extra_scripts               = pio/strip-floats.py
-                              pio/name-firmware.py
-                              pio/gzip-firmware.py
-                              pio/override_copy.py
+extra_scripts               = pio-tools/strip-floats.py
+                              pio-tools/name-firmware.py
+                              pio-tools/gzip-firmware.py
+                              pio-tools/override_copy.py
 
 [esp_defaults]
 ; *** remove undesired all warnings
