--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -58,7 +58,7 @@ build_flags                 = ${core.build_flags}
 upload_port                 = COM5
 
 extra_scripts               = ${scripts_defaults.extra_scripts}
-;                              pio/obj-dump.py
+;                              pio-tools/obj-dump.py
 
 lib_extra_dirs              = ${library.lib_extra_dirs}
 
