--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -93,6 +93,9 @@ platform_packages           = framework-arduinoespressif8266 @ https://github.co
 build_unflags               = ${esp_defaults.build_unflags}
                               -Wswitch-unreachable
 build_flags                 = ${esp82xx_defaults.build_flags}
+; *** Use ONE of the two PWM variants. Tasmota default is Locked PWM
+                              ;-DWAVEFORM_LOCKED_PHASE
+                              -DWAVEFORM_LOCKED_PWM
                               -Wno-switch-unreachable
 
 
