--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -35,6 +35,7 @@ default_envs =
 ;                tasmota32-display
 ;                tasmota32-ir
 ;                tasmota32-ircustom
+;                tasmota32solo1
 
 
 [common]
@@ -158,6 +159,13 @@ lib_extra_dirs              =
 ; *** Mostly not used functions. Recommended to disable
                               lib/lib_div
 
+; *** EXPERIMENTAL Tasmota version for ESP32solo1 (used in some Xiaomi devices)
+[env:tasmota32solo1]
+extends                     = env:tasmota32
+platform_packages           = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/raw/framework-arduinoespressif32/framework-arduinoespressif32-release_v3.3-solo1-96a8ff518.tar.gz
+                              platformio/tool-esptoolpy @ ~1.30000.0
+build_unflags               = ${esp32_defaults.build_unflags}
+build_flags                 = ${common32.build_flags} -DFIRMWARE_LITE
 
 
 ; *** Debug version used for PlatformIO Home Project Inspection
