--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -165,7 +165,7 @@ extends                     = env:tasmota32
 platform_packages           = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/raw/framework-arduinoespressif32/framework-arduinoespressif32-release_v3.3-solo1-96a8ff518.tar.gz
                               platformio/tool-esptoolpy @ ~1.30000.0
 build_unflags               = ${esp32_defaults.build_unflags}
-build_flags                 = ${common32.build_flags} -DFIRMWARE_LITE
+build_flags                 = ${common32.build_flags}
 
 
 ; *** Debug version used for PlatformIO Home Project Inspection
