--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -76,13 +76,16 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 
 
 [tasmota_stage]
-; *** Esp8266 core for Arduino version Tasmota stage (PR7231 and Backport PR7514)
-platform_packages           = tasmota/framework-arduinoespressif8266 @ 3.20704.7
+; *** Esp8266 core for Arduino version Tasmota stage. Backport for PWM selection
+platform_packages           = framework-arduinoespressif8266 @ https://github.com/Jason2866/Arduino.git#2.7.4.9
                               platformio/toolchain-xtensa @ 2.40802.200502
-                              platformio/tool-esptoolpy @ ~1.30000.0
                               platformio/tool-esptool @ 1.413.0
+                              platformio/tool-esptoolpy @ ~1.30000.0
 build_unflags               = ${esp_defaults.build_unflags}
 build_flags                 = ${esp82xx_defaults.build_flags}
+; *** Use ONE of the two PWM variants. Tasmota default is Locked PWM
+                              ;-DWAVEFORM_LOCKED_PHASE
+                              -DWAVEFORM_LOCKED_PWM
 
 [core_stage]
 ; *** Esp8266 core for Arduino version stage
