Use tasmota core 2.7.4.9 from Platformio registry

--- a/platformio_override_sample.ini
+++ b/platformio_override_sample.ini
@@ -77,7 +77,7 @@ lib_extra_dirs              = ${library.lib_extra_dirs}
 
 [tasmota_stage]
 ; *** Esp8266 core for Arduino version Tasmota stage. Backport for PWM selection
-platform_packages           = framework-arduinoespressif8266 @ https://github.com/Jason2866/Arduino.git#2.7.4.9
+platform_packages           = tasmota/framework-arduinoespressif8266 @ ~2.7.4
                               platformio/toolchain-xtensa @ 2.40802.200502
                               platformio/tool-esptool @ 1.413.0
                               platformio/tool-esptoolpy @ ~1.30000.0
